# GLog

./: CMakeLists.txt
include/GLog/: Log.hpp
include/Log/: Log.hpp
src/GLog/: CMakeLists.txt  Log.cpp
src/Tests/: CMakeLists.txt  main.cpp
